# synth-01

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust_ci.yml
arduino/uno_example_audio/: uno_example_audio.ino
arduino/v1_prototype_mega_audio/: mega_audio.ino  v1_prototype_wiring_diagram.excalidraw
docs/: architecture.excalidraw  audio.md  envelope.md  formula_sheet.md  materials.md  rpi-pico-logical-analyzer.md  todo.md  troubleshooting.md  whiteboard_01.excalidraw
esp32-c3/: .gitignore  Cargo.toml  sdkconfig.defaults
esp32-c3/.devcontainer/: devcontainer.json
esp32-c3/docs/: README.md
esp32-c3/scripts/: flash.sh
esp32-c3/src/: audio_in.rs  audio_out.rs  audio_waves.rs  main.rs  midi.rs  note.rs  util.rs
idf-controller/src/: audio_out.rs  main.rs  midi.rs
src/: audio_in.rs  audio_out.rs  audio_waves.rs  envelope.rs  main.rs  midi.rs  note.rs  plot_file.py  util.rs
