[package]
name = "synth-01"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
midir = "0.10.1"
sdl2 = { version = "0.37.0", features=["bundled"] }

[target.'cfg(target_os="windows")'.dependencies.sdl2]
features=["bundled"]
version="0.37.0"

[target.'cfg(target_os="windows")'.dependencies.sdl2-sys]
version = "0.37.0"
